# seavor

./: Dockerfile  README.md  config.sh  docker_build.sh  docker_run.sh  run_dev.sh
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: app_config.py  app_state.py  config.py  dependencies.py  log_config.py  main.py  setup.py  storage_def.py  version.py
backend/app/core/: app_config.py  feature_flags.py  roles.py  teacher_ai_model.py  translation_status.py  translator_ai_model.py  verifier_ai_model.py
backend/app/core/user_settings/: user_settings_model.py  user_settings_service.py
backend/app/features/: languages.py  levels.py
backend/app/routers/: audio_files.py  auth.py  auth_google.py  config.py  gap_fill_choices.py  images.py  letter_shuffles.py  letter_shuffles_translations.py  native_topics.py  native_topics_pages.py  repetitions.py  teacher.py  topics.py  topics_pages.py  user_settings.py  users.py
backend/app/shared/: localized_static_files.py
backend/tests/: conftest.py  mocker_image_generator.py
backend/tests/integration/: test_all_image_gen_service.py  test_audio_file_service.py  test_google_tts_service.py  test_gtts_service.py
backend/tests/routers/: test_config.py
backend/tests/unit/: conftest.py  test_version.py
backend/tools/: _set_path.py  copy_blobs_dev_prod.py  copy_db.py  create_gap_fill_choice.py  create_grammar_topic.py  create_letter_shuffle.py  create_word_set.py  delete_duplicated_native_topics_content.py  delete_duplicated_repetitions.py  delete_orphan_blobs.py  migrate_db.py  upgrade_db.py
frontend/: .gitignore  (+3 more)
(+245 files in other folders)
