[project]
name = "backend"
dynamic = [ "version" ] # See app/version.py
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.40.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "app"
]

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
